src/local/src/tests/snapshots/liquid_cache_local__tests__date_optimizer__date_extraction_and_ordering.snap
---
source: src/local/src/tests/date_optimizer.rs
expression: snapshot
---
plan: 
┌───────────────────────────┐
│       ProjectionExec      │
│    --------------------   │
│           year:           │
│  date_part(YEAR, date_a)  │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       DataSourceExec      │
│    --------------------   │
│          files: 1         │
│                           │
│          format:          │
│       liquid_parquet      │
└───────────────────────────┘

stats:
entries.total: 123
entries.after_first_run: 123
entries.memory.arrow: 4
entries.memory.liquid: 38
entries.memory.hybrid_liquid: 81
entries.disk.liquid: 0
entries.disk.arrow: 0
usage.memory_bytes: 1032554
usage.disk_bytes: 1081512
runtime.get_arrow_array_calls: 123
runtime.get_with_selection_calls: 0
runtime.get_with_predicate_calls: 0
runtime.get_predicate_hybrid_success: 0
runtime.get_predicate_hybrid_needs_io: 0
runtime.get_predicate_hybrid_unsupported: 0
runtime.try_read_liquid_calls: 0
runtime.hit_date32_expression_calls: 81
